--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <form onsubmit="return false;" method="post" name="searchtagsform">
             <label for="searchtags" id="searchtags_string">Search tags</label>
             <input type="search" id="searchtags" name="searchtags">
-            <input type="checkbox" id="exactmatch" name"exactmatch">
+            <input type="checkbox" id="exactmatch" name="exactmatch">
             <label for="exactmatch" id="exactmatch_string">Exact Match?</label>
             <input type="submit" value="Submit" id="submit_button" onclick="query()" />
         </form>
