updating frontend to reflect changes on the db

--- a/index.html
+++ b/index.html
@@ -24,11 +24,8 @@
             <label for="simplesearch_input_creatorname" id="simplesearch_input_creatorname_string">Creator: </label>
             <input type="search" id="simplesearch_input_creatorname" name="simplesearch_input_creatorname">
             <br />
-            <label for="simplesearch_input_furname_ko" id="simplesearch_input_furname_ko_string">Name (한국어): </label>
-            <input type="search" id="simplesearch_input_furname_ko" name="simplesearch_input_furname_ko">
-            <br />
-            <label for="simplesearch_input_furname_en" id="simplesearch_input_furname_en_string">Name (영어): </label>
-            <input type="search" id="simplesearch_input_furname_en" name="simplesearch_input_furname_en">
+            <label for="simplesearch_input_furname" id="simplesearch_input_furname_string">Name (한국어): </label>
+            <input type="search" id="simplesearch_input_furname" name="simplesearch_input_furname">
             <br />
             <label for="simplesearch_input_bday_from" id="simplesearch_input_bday_title_string">Birthday (yyyymmdd): </label>
             <input type="search" id="simplesearch_input_bday_from" name="simplesearch_input_bday_from">
@@ -77,7 +74,8 @@
     </section>
     <hr>
     <section id="searchResults">
-
+        <p>&nbsp;</p>
+        <p style="text-align: center; font-style: oblique; color: #777">(검색 결과가 여기 표시됩니다)<br />(Search Results Will Be Displayed Here)</p>
     </section>
 </body>
 </html>
