popup to show details/no image placeholder

--- a/index.html
+++ b/index.html
@@ -86,5 +86,8 @@
         <p>&nbsp;</p>
         <p style="text-align: center; font-style: oblique; color: #777">(검색 결과가 여기 표시됩니다)<br />(Search Results Will Be Displayed Here)</p>
     </section>
+    <div class="overlay" id="moreinfo_overlay">
+        
+    </div>
 </body>
 </html>
