hyperlink will open in new tab; only the photo will open the detailed info box when clicked; detailed info box will only close by clicking the outside

--- a/index.html
+++ b/index.html
@@ -89,5 +89,15 @@
     <div class="overlay" id="moreinfo_overlay">
         
     </div>
+    <script>
+// event listener
+// close overlay box if outside of the box is clicked
+document.getElementById('moreinfo_overlay').addEventListener('click', function(event){
+    //console.log(event.target.id)
+    if (event.target.id == 'dummyCenterWrapper'){
+        hideOverlay();
+    }
+});
+    </script>
 </body>
 </html>
