header logo display

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <script src="panelnav.js"></script>
 </head>
 <body onload="pageinit(), panelnavinit();">
+    <section id="header" style="text-align:center">
+        <img src="header.png" style="width: 50vw">
+    </section>
     <section id="panelnav">
         <!-- TO BE FILLED BY THE COMPUTER LORD -->
     </section>
