--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 <head>
     <link rel="stylesheet" type="text/css" href="style.css">
-    <title>퍼슈트검색체계 0.1.1-20210505</title>
+    <title>퍼슈트검색체계</title>
     <script src="searcher.js"></script>
     <script src="panelnav.js"></script>
 </head>
