--- a/statistics.html
+++ b/statistics.html
@@ -50,7 +50,7 @@
         
         <div id="flex_container" style="display:flex">
             <div class="chart_bgimg"><div id="market_share_selected" class="chart_container">
-                <h3 style="padding-left:0.5em">시장 점유율</h3>
+                <h3 style="padding-left:0.5em">시장 점유율 (연도별, 선택)</h3>
                 <table id="market_share_stat_table">
                     <!-- TO BE FILLED BY THE COMPUTER LORD -->
                 </table>
