--- a/workshops.html
+++ b/workshops.html
@@ -7,16 +7,7 @@
     <script src="panelnav.js"></script>
 </head>
 <body onload="panelnavinit();">
-    <header>
-        <div id="bannerimage" style="display:flex; justify-content:center; align-items:center; float:left; width:30%; height:inherit">
-            <img src="header.png" style="width: 100%">
-        </div>
-        <div id="panelnavcontainer" style="text-align:center; float:right; width:70%; height:inherit">
-            <div id="panelnav">
-                <!-- TO BE FILLED BY THE COMPUTER LORD -->
-            </div>
-        </div>
-    </header>
+    <header><bannerimage></bannerimage><panelnavwrapper></panelnavwrapper></header>
     <contents>
         <p>Hello, world!</p>
     </contents>
