one last touchup for stats page

--- a/statistics.html
+++ b/statistics.html
@@ -27,31 +27,28 @@
         <div id="flex_container" style="display:flex">
             <div class="chart_bgimg" style="flex: 1 1 23vw"><div id="birthday_stats" class="chart_container">
                 <h3 style="padding-left:0.5em">활동개시일</h3>
-                <table id="birthday_stat_table">
+                <table class="stat" id="birthday_stat_table">
                     <!-- TO BE FILLED BY THE COMPUTER LORD -->
                 </table>
             </div></div>
-            <div class="chart_bgimg" style="flex: 1 1 40vw"><div id="style_stats" class="chart_container">
+            <div class="chart_bgimg" style="flex: 1 1 37vw"><div id="style_stats" class="chart_container">
                 <h3 style="padding-left:0.5em">스타일</h3>
-                <table id="style_stat_table">
+                <table class="stat" id="style_stat_table">
                     <!-- TO BE FILLED BY THE COMPUTER LORD -->
                 </table>
             </div></div>
-            <div class="chart_bgimg" style="flex: 1 1 37vw"><div id="diy_stats" class="chart_container">
+            <div class="chart_bgimg" style="flex: 1 1 40vw"><div id="diy_stats" class="chart_container">
                 <h3 style="padding-left:0.5em">자작 vs 수주</h3>
-                <table id="diy_stat_table">
+                <table class="stat" id="diy_stat_table">
                     <!-- TO BE FILLED BY THE COMPUTER LORD -->
                 </table>
             </div></div>
-        </div>
-        
-        <div id="flex_container" style="display:flex">
         </div>
             
         <div id="flex_container" style="display:flex">
             <div class="chart_bgimg" style="flex: 1 0"><div id="market_share_selected" class="chart_container">
                 <h3 style="padding-left:0.5em">시장 점유율 (연도별, 선택)</h3>
-                <table id="market_share_stat_table">
+                <table class="stat" id="market_share_stat_table">
                     <!-- TO BE FILLED BY THE COMPUTER LORD -->
                 </table>
                 <legend id="market_share_stat_table_legend">
