--- a/statistics.html
+++ b/statistics.html
@@ -34,7 +34,7 @@
         </table>
         <hr />
         
-        <h3>간단 그래프</h3>
+        <h3>통계 그래프</h3>
         
         <div id="flex_container" style="display:flex">
             <div class="chart_bgimg" style="flex: 1 1 23vw"><div id="birthday_stats" class="chart_container">
