hair colour searcher

--- a/statistics.html
+++ b/statistics.html
@@ -16,6 +16,10 @@
             <td class="tableFormLabel">20210506</td>
             <td>최초 릴리스</td>
         </tr>
+        <tr>
+            <td class="tableFormLabel">20210507</td>
+            <td>색상 키워드 검색 기능 추가</td>
+        </tr>
         </table>
         
         <hr />
