reset button for simple search; advanced search is now a tag search and is collapsed by default; hair colour search now behaves more sensively

--- a/statistics.html
+++ b/statistics.html
@@ -20,6 +20,10 @@
             <td class="tableFormLabel">20210507</td>
             <td>색상 키워드 검색 기능 추가</td>
         </tr>
+        <tr>
+            <td class="tableFormLabel">20210508</td>
+            <td>초기화 버튼 추가, 고급 검색을 태그 검색으로 변경하면서 기본으로 숨기기</td>
+        </tr>
         </table>
         
         <hr />
