--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         </section>
         <hr>
         <section id="searchform" class="accordion">
-            <input type="checkbox" name="collapse" id="handle4" checked="unchecked">
+            <input type="checkbox" name="collapse" id="handle4">
             <h3 class="handle">
                 <label id="searchform_header" for="handle4"></label>
             </h3>
