--- a/statistics.html
+++ b/statistics.html
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta name="robots" content="noindex" />
     <link rel="stylesheet" type="text/css" href="style.css">
     <title>퍼슈트검색체계</title>
     <script src="panelnav.js"></script>
