species stats will also look for chimeras

--- a/statistics.html
+++ b/statistics.html
@@ -75,7 +75,7 @@
             
         <div id="flex_container" style="display:flex">
             <div class="chart_bgimg" style="flex: 1 1 50vw"><div id="top_ten_species" class="chart_container">
-                <h3 style="padding-left:0.5em">종 (상위 10개)</h3>
+                <h3 style="padding-left:0.5em">종 (상위 10개, 중복 허용)</h3>
                 <table class="stat" id="top_ten_species_table">
                     <!-- TO BE FILLED BY THE COMPUTER LORD -->
                 </table>
