fursuit workshop roster wip

--- a/workshops.html
+++ b/workshops.html
@@ -6,11 +6,12 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <title>퍼슈트검색체계</title>
     <script src="panelnav.js"></script>
+    <script src="workshops.js"></script>
 </head>
-<body onload="panelnavinit();">
+<body onload="panelnavinit(), workshopsinit();">
     <header><bannerimage></bannerimage><panelnavwrapper></panelnavwrapper></header>
     <contents>
-        <p>Hello, world!</p>
+        <div id="workshops_roster"><!-- TO BE FILLED BY THE COMPUTER LORD --></div>
     </contents>
     <overlay>
         
