--- a/statistics.html
+++ b/statistics.html
@@ -30,6 +30,10 @@
                     <td class="tableFormLabel">20210508</td>
                     <td>초기화 버튼 추가, 고급 검색을 태그 검색으로 변경하면서 기본으로 숨기기, 종 관련 통계 추가</td>
                 </tr>
+                <tr>
+                    <td class="tableFormLabel">20210512</td>
+                    <td>퍼슈트 제작자 로스터 추가</td>
+                </tr>
                 </table>
             </div>
         </section>
