viewport scailing for mobile web

--- a/legal.html
+++ b/legal.html
@@ -3,6 +3,7 @@
 <html>
 <head>
     <meta name="robots" content="noindex" />
+    <meta name="viewport" content="user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, width=device-width">
     <link rel="stylesheet" type="text/css" href="style.css">
     <title>퍼슈트검색체계</title>
     <script src="panelnav.js"></script>
