a separator between base colour and dyes

--- a/index.html
+++ b/index.html
@@ -57,6 +57,9 @@
                         <table style="margin-left: -3px">
                             <tr>
                                 <td id="simplesearch_colourcombi0" style="font-size:80%; text-align:center"></td>
+                                    <td rowspan="2" style=""></td>
+                                    <td rowspan="2" style="width:1px; background: #AAA; padding: 0"></td>
+                                    <td rowspan="2" style=""></td>
                                 <td id="simplesearch_colourcombi1" style="font-size:80%; text-align:center"></td>
                                 <td id="simplesearch_colourcombi2" style="font-size:80%; text-align:center"></td>
                                 <td id="simplesearch_colourcombi3" style="font-size:80%; text-align:center"></td>
