forgot to update the update log

--- a/statistics.html
+++ b/statistics.html
@@ -35,6 +35,10 @@
                     <td class="tableFormLabel">20210512</td>
                     <td>퍼슈트 제작자 로스터 추가</td>
                 </tr>
+                <tr>
+                    <td class="tableFormLabel">20210514</td>
+                    <td>검색창에 색도표 추가</td>
+                </tr>
                 </table>
             </div>
         </section>
