reformed birthday range search

--- a/index.html
+++ b/index.html
@@ -34,9 +34,20 @@
                                 </tr>
                                 <tr>
                                     <td class="tableFormLabel"><label for="simplesearch_input_bday_from" id="simplesearch_input_bday_title_string"></label></td>
-                                    <td><input type="search" size="5" id="simplesearch_input_bday_from" name="simplesearch_input_bday_from">
-                                    <label> &mdash; </label>
-                                    <input type="search" size="5" id="simplesearch_input_bday_to" name="simplesearch_input_bday_to"></input>
+                                    <td>
+                                        <table style="margin-left: -3px">
+                                            <tr><td>
+                                                <label id="bday_from_pre"></label>
+                                                <input type="search" size="5" id="simplesearch_input_bday_from" name="simplesearch_input_bday_from"></input>
+                                                <label id="bday_from_post"></label>
+                                            </td></tr>
+                                            <tr><td>
+                                                <label id="bday_to_pre"></label>
+                                                <input type="search" size="5" id="simplesearch_input_bday_to" name="simplesearch_input_bday_to"></input>
+                                                <label id="bday_to_post"></label>
+                                            </td></tr>
+                                        </table>
+                                    </td>
                                 </tr>
                                 <tr>
                                     <td class="tableFormLabel"><label for="simplesearch_dropdown_species" id="simplesearch_dropdown_species_string"></label></td>
