--- a/statistics.html
+++ b/statistics.html
@@ -92,6 +92,20 @@
         </div>
             
         <div id="flex_container" style="display:flex">
+            <div class="chart_bgimg" style="flex: 1 0"><div id="colour_scheme" class="chart_container">
+                <h3 style="padding-left:0.5em">배색</h3>
+                <div style="display:flex">
+                    <div class="flex_halfcol" id="colour_scheme_table_bg">
+                        rowl<!-- TO BE FILLED BY THE COMPUTER LORD -->
+                    </div>
+                    <div class="flex_halfcol" id="colour_scheme_table_fg">
+                        lol<!-- TO BE FILLED BY THE COMPUTER LORD -->
+                    </div>
+                </div>
+            </div></div>
+        </div>
+            
+        <div id="flex_container" style="display:flex">
             <div class="chart_bgimg" style="flex: 1 0"><div id="market_share_selected" class="chart_container">
                 <h3 style="padding-left:0.5em">시장 점유율 (연도별, 선택)</h3>
                 <table class="stat" id="market_share_stat_table">
