--- a/statistics.html
+++ b/statistics.html
@@ -29,7 +29,7 @@
                 </tr>
                 <tr>
                     <td class="tableFormLabel">20210508</td>
-                    <td>초기화 버튼 추가, 고급 검색을 태그 검색으로 변경하면서 기본으로 숨기기, 종 관련 통계 추가</td>
+                    <td>초기화 버튼 추가, 고급 검색을 태그 검색으로 변경하면서 기본으로 숨기기, 종 통계 추가</td>
                 </tr>
                 <tr>
                     <td class="tableFormLabel">20210512</td>
@@ -37,7 +37,7 @@
                 </tr>
                 <tr>
                     <td class="tableFormLabel">20210514</td>
-                    <td>검색창에 색도표 추가</td>
+                    <td>검색창에 색도표 추가, 배색 통계 추가</td>
                 </tr>
                 </table>
             </div>
