--- a/statistics.html
+++ b/statistics.html
@@ -39,6 +39,10 @@
                     <td class="tableFormLabel">20210514</td>
                     <td>검색창에 색도표 추가, 배색 통계 추가</td>
                 </tr>
+                <tr>
+                    <td class="tableFormLabel">20210515</td>
+                    <td>검색 성능 개선</td>
+                </tr>
                 </table>
             </div>
         </section>
