search is-partial is now is-full

--- a/index.html
+++ b/index.html
@@ -62,11 +62,9 @@
                                     </select></td>
                                 </tr>
                                 <tr>
-                                    <td class="tableFormLabel"><label for="simplesearch_input_is_partial" id="simplesearch_input_is_partial_string"></label></td>
-                                    <td><select name="simplesearch_input_is_partial" id="simplesearch_input_is_partial">
-                                        <option value="dont_care">&mdash;</option>
-                                        <option value="TRUE">TRUE</option>
-                                        <option value="FALSE">FALSE</option>
+                                    <td class="tableFormLabel"><label for="simplesearch_input_is_full_suit" id="simplesearch_input_is_full_suit_string"></label></td>
+                                    <td><select name="simplesearch_input_is_full_suit" id="simplesearch_input_is_full_suit">
+                                        <!-- TO BE FILLED BY THE COMPUTER LORD -->
                                     </select></td>
                                 </tr>
                                 
