db structure change, eye colour search is also a checkbox

--- a/index.html
+++ b/index.html
@@ -71,16 +71,7 @@
                                 <tr>
                                     <td class="tableFormLabel"><label for="simplesearch_eyes" id="simplesearch_input_eyes_string"></label></td>
                                     <td>
-                                        <table style="margin-left: -3px">
-                                            <tr>
-                                                <td id="simplesearch_eyes_sclera_string" style="font-size:80%; text-align:center"></td>
-                                                <td id="simplesearch_eyes_string" style="font-size:80%; text-align:center"></td>
-                                            </tr>
-                                            <tr>
-                                                <td><select id="simplesearch_eyes_sclera" name="simplesearch_eyes_sclera"></select><!-- TO BE FILLED BY THE COMPUTER LORD --></td>
-                                                <td><select id="simplesearch_eyes" name="simplesearch_eyes"><!-- TO BE FILLED BY THE COMPUTER LORD --></select></td>
-                                            </tr>
-                                        </table>
+                                        <colourchooser id="simplesearch_eye_colours"><!-- TO BE FILLED BY THE COMPUTER LORD --></colourchooser>
                                     </td>
                                 </tr>
                                 
