simplesearch: birthday search selector is now 'date'

--- a/index.html
+++ b/index.html
@@ -75,12 +75,12 @@
                                         <table style="margin-left: -3px">
                                             <tr><td>
                                                 <label id="bday_from_pre"></label>
-                                                <input type="search" size="5" id="simplesearch_input_bday_from" name="simplesearch_input_bday_from"></input>
+                                                <input type="date" id="simplesearch_input_bday_from" name="simplesearch_input_bday_from"></input>
                                                 <label id="bday_from_post"></label>
                                             </td></tr>
                                             <tr><td>
                                                 <label id="bday_to_pre"></label>
-                                                <input type="search" size="5" id="simplesearch_input_bday_to" name="simplesearch_input_bday_to"></input>
+                                                <input type="date" id="simplesearch_input_bday_to" name="simplesearch_input_bday_to"></input>
                                                 <label id="bday_to_post"></label>
                                             </td></tr>
                                         </table>
