fixed a bug where the furbox was unclickable

--- a/index.html
+++ b/index.html
@@ -188,9 +188,9 @@
     <overlay id="moreinfo_overlay">
         <!-- TO BE FILLED BY THE COMPUTER LORD -->
     </overlay>
-    <dummyclipboardarea style="display:block;opacity:0">
+    <clipit style="display:block; height:1px"><div id="clipboard_dummy_container" style="display:none">
         <input type="text" id="clipboard_dummy" size="1"></input>
-    </dummyclipboardarea>
+    </div></clipit>
     <script>
 // event listener
 // close overlay box if outside of the box is clicked
