--- a/statistics.html
+++ b/statistics.html
@@ -17,7 +17,7 @@
             <h3 class="handle">
                 <label for="handle1">프론트엔드 업데이트 내역</label>
             </h3>
-            <div class="content">
+            <div class="accordion_inner">
                 <table>
                 <tr>
                     <td class="tableFormLabel">20210506</td>
@@ -42,6 +42,10 @@
                 <tr>
                     <td class="tableFormLabel">20210515</td>
                     <td>검색 성능 개선</td>
+                </tr>
+                <tr>
+                    <td class="tableFormLabel">20210516</td>
+                    <td>레이아웃 개선</td>
                 </tr>
                 </table>
             </div>
@@ -99,11 +103,14 @@
             <div class="chart_bgimg" style="flex: 1 0"><div id="colour_scheme" class="chart_container">
                 <h3 style="padding-left:0.5em">배색</h3>
                 <div style="display:flex">
-                    <div class="flex_halfcol" id="colour_scheme_table_bg">
-                        rowl<!-- TO BE FILLED BY THE COMPUTER LORD -->
+                    <div class="flex_thirdcol" id="colour_scheme_table">
+                        <!-- TO BE FILLED BY THE COMPUTER LORD -->
                     </div>
-                    <div class="flex_halfcol" id="colour_scheme_table_fg">
-                        lol<!-- TO BE FILLED BY THE COMPUTER LORD -->
+                    <div class="flex_thirdcol" id="hair_colours_table">
+                        <!-- TO BE FILLED BY THE COMPUTER LORD -->
+                    </div>
+                    <div class="flex_thirdcol" id="eye_colours_table">
+                        <!-- TO BE FILLED BY THE COMPUTER LORD -->
                     </div>
                 </div>
             </div></div>
