--- a/index.html
+++ b/index.html
@@ -65,10 +65,10 @@
                                 </tr>
                                 
                                 <!-- 소유자 -->
-                                <!--<tr>
+                                <tr>
                                     <td class="tableFormLabel"><label for="simplesearch_input_actorname" id="simplesearch_input_actorname_string"></label></td>
                                     <td><input type="search" size="12" id="simplesearch_input_actorname" name="simplesearch_input_actorname"></input>
-                                </tr>-->
+                                </tr>
                                 
                                 <!-- 이름 -->
                                 <tr>
@@ -188,6 +188,12 @@
     <overlay id="moreinfo_overlay">
         <!-- TO BE FILLED BY THE COMPUTER LORD -->
     </overlay>
+    <footer>
+        <div class="footershape"></div>
+        <div class="footerlogo"></div>
+        <p class="p1">퍼슈트검색체계는 MIT License에 따라 배포됩니다.<br>퍼슈트검색체계에 등록된 모든 이미지는 각 이미지의 저작권자에게 저작권이 있습니다.</p>
+        <p class="p2"><a target="_blink" href="mailto:curioustorvald@gmail.com">curioustorvald<mailat></mailat>gmail<maildot></maildot>com</a><br>개발핫산: CuriousTorvald</p>
+    </footer>
     <clipit style="display:block; height:1px"><div id="clipboard_dummy_container" style="display:none">
         <input type="text" id="clipboard_dummy" size="1"></input>
     </div></clipit>
