revert colour struct change

--- a/statistics.html
+++ b/statistics.html
@@ -47,6 +47,10 @@
                     <td class="tableFormLabel">20210516</td>
                     <td>레이아웃 개선</td>
                 </tr>
+                <tr>
+                    <td class="tableFormLabel">20210517</td>
+                    <td>태그검색 재작성</td>
+                </tr>
                 </table>
             </div>
         </section>
