immediate tag search from tags query string

--- a/index.html
+++ b/index.html
@@ -205,6 +205,7 @@ document.getElementById('moreinfo_overlay').addEventListener('click', function(e
 
 let qd = {}
 if (location.search) location.search.substr(1).split`&`.forEach(item => {let [k,v] = item.split`=`; v = v && decodeURIComponent(v); (qd[k] = qd[k] || []).push(v)})
+console.log(qd)
     </script>
 </body>
 </html>
